--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ server.port=8080
 spring.mvc.hiddenmethod.filter.enabled = true
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://121.199.62.19:3306/chen?serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/chen?serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=201129
+spring.datasource.password=1234
 
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.type-aliases-package=com.chen.entity
-spring.redis.host=121.199.62.19
-spring.redis.password = 201129
+spring.redis.host=localhost
+spring.redis.password = 1234
 spring.redis.port=6379
 
 spring.resources.static-locations=classpath:/templates/,classpath:/static/
